kubernetes/cluster/extras/it-tools/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
  namespace: extras
  labels:
    app.kubernetes.io/name: it-tools
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: it-tools.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: it-tools-keda-http-interceptor
                port:
                  number: 80
  tls:
    - hosts:
        - it-tools.brhd.io
